Replace null values in 'children' column

--- a/1SA Final Project Hotel Bookings.ipynb
+++ b/1SA Final Project Hotel Bookings.ipynb
@@ -283,7 +283,46 @@
    "outputs": [],
    "source": [
     "# dropping \"company\" and \"agent\" columns\n",
-    "df.drop([\"company\", \"agent\"], axis=1, inplace=True)"
+    "df.drop([\"company\", \"agent\"], axis=1, inplace=True)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> The children column has only 4 missing values. These can be replaced with 0, suggesting\n",
+    "> there were no kids during the stay."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# replacing null values in 'children' column with 0\n",
+    "df.fillna({\"children\": 0}, inplace=True)\n",
+    "# examining changes\n",
+    "df['children'].isnull().sum()"
    ],
    "metadata": {
     "collapsed": false,
@@ -294,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "outputs": [],
    "source": [],
    "metadata": {
