Drop "country" column

--- a/1SA Final Project Hotel Bookings.ipynb
+++ b/1SA Final Project Hotel Bookings.ipynb
@@ -283,7 +283,7 @@
    "outputs": [],
    "source": [
     "# dropping \"company\" and \"agent\" columns\n",
-    "df.drop([\"company\", \"agent\"], axis=1, inplace=True)\n"
+    "df.drop([\"company\", \"agent\"], axis=1, inplace=True)"
    ],
    "metadata": {
     "collapsed": false,
@@ -333,7 +333,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "PRT    48590\nGBR    12129\nFRA    10415\nESP     8568\nDEU     7287\n       ...  \nVGB        1\nPLW        1\nAIA        1\nFJI        1\nBWA        1\nName: country, Length: 177, dtype: int64"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"country\"].value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> As shown above, there are 177 different countries. This indicates that the data is representative\n",
+    "> worldwide, contrary to a specific region.\n",
+    "> A quick assessment will portray a better perspective on how to treat the missing data."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of countries with one or less instances: 30 \n",
+      "Number of countries with 10 or less instances: 84 \n",
+      "Number of countries with 50 or less instances: 120 \n",
+      "Number of countries with 100 or less instances: 140 \n",
+      "Number of countries with 1000 or less instances: 162\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = (df[\"country\"].value_counts() <= 1).sum()\n",
+    "num10 = (df[\"country\"].value_counts() <= 10).sum()\n",
+    "num50 = (df[\"country\"].value_counts() <= 50).sum()\n",
+    "num100 = (df[\"country\"].value_counts() <= 100).sum()\n",
+    "num1000 = (df[\"country\"].value_counts() <= 1000).sum()\n",
+    "\n",
+    "print(\"Number of countries with one or less instances:\", num1,\n",
+    "      \"\\nNumber of countries with 10 or less instances:\", num10,\n",
+    "      \"\\nNumber of countries with 50 or less instances:\", num50,\n",
+    "      \"\\nNumber of countries with 100 or less instances:\", num100,\n",
+    "      \"\\nNumber of countries with 1000 or less instances:\", num1000)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> More than half of the instances have 50 or fewer observations in the DataFrame.\n",
+    "> Meanwhile, there are few countries with thousands. This shows that the countries\n",
+    "> are not the best option to represent results from the data since they are\n",
+    "> unevenly divided. For all the reasons stated, this column is unnecessary for further\n",
+    "> analysis."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
+    "# dropping \"country\" column\n",
+    "df.drop(\"country\", axis=1, inplace=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "outputs": [],
    "source": [],
    "metadata": {
