--- a/1SA Final Project Hotel Bookings.ipynb
+++ b/1SA Final Project Hotel Bookings.ipynb
@@ -196,39 +196,50 @@
    "cell_type": "markdown",
    "source": [
     "> ### Features in the DataFrame:\n",
-    "> 0. hotel: Resort Hotel or City Hotel\n",
-    "> 1. is_cancelled: Value indicating if the booking was canceled (1) or not (0)\n",
-    "> 2. lead_time: Number of days between the booking date to the arrival date\n",
-    "> 3. arrival_date_year: Year of arrival date\n",
-    "> 4. arrival_date_month: Month  of arrival date\n",
-    "> 5. arrival_date_week: Week number according to year of arrival\n",
-    "> 6. arrival_date_day: Day (in numbers) of arrival date\n",
-    "> 7. stays_in_weekend_nights: Number of weekend nights (Saturday or Sunday) booked for accommodation\n",
-    "> 8. stays_in_week_nights: Number of week nights (Monday to Friday) booked for accommodation\n",
-    "> 9. adults: Number of adults\n",
-    "> 10. children: Number of children\n",
-    "> 11. babies: Number of babies\n",
-    "> 12. meal: Type of meal booked\n",
-    "> 13. country: Country of origin\n",
-    "> 14. market_segment: Market segment designation (TA- Travel Agents, TO- Tour Operators)\n",
-    "> 15. distribution_channel: Booking distribution channel (TA- Travel Agents, T0- Tour Operators)\n",
-    "> 16. is_repeated_guest: Value indication if booking name was from a repeated guest (1) or not (0)\n",
-    "> 17. previous_cancellations: Number of previous bookings that were cancelled by the customer (prior to current booking)\n",
-    "> 18. previous_bookings_not_canceled: Number of previous bookings not cancelled prior to current booking\n",
-    "> 19. reserved_room_type: Code of room type reserved\n",
-    "> 20. assigned_room_type: Code for the type of room assigned to the booking\n",
-    "> 21. booking_changes: Number of changes made to the booking\n",
-    "> 22. deposit_type: Indication on if the customer made a deposit to guarantee the booking\n",
-    "> 23. agent: ID of the travel agency that made the booking\n",
-    "> 24. company: ID of the company or organization that made the booking or is responsible for payment\n",
-    "> 25. days_in_waiting_list: Number of days booking was in the waiting list until it was confirmed to the customer\n",
-    "> 26. customer_type: Type of booking\n",
-    "> 27. adr: Average Daily Rate (the sum of transactions divided by the number of nights stayed)\n",
-    "> 28. required_car_parking_spaces: Number of car parking spaces requested\n",
-    "> 29. total_of_special_requests: Number of special requests made by the customer\n",
-    "> 30. reservation_status: Last reservation status (Canceled, Check-Out, No-Show)\n",
-    "> 31. reservation_status_date: Date at which the last status was set\n",
-    ">"
+    ">> 0. hotel: Resort Hotel or City Hotel\n",
+    ">> 1. is_cancelled: Value indicating if the booking was canceled (1) or not (0)\n",
+    ">> 2. lead_time: Number of days between the booking date to the arrival date\n",
+    ">> 3. arrival_date_year: Year of arrival date\n",
+    ">> 4. arrival_date_month: Month  of arrival date\n",
+    ">> 5. arrival_date_week: Week number according to year of arrival\n",
+    ">> 6. arrival_date_day: Day (in numbers) of arrival date\n",
+    ">> 7. stays_in_weekend_nights: Number of weekend nights (Saturday or Sunday) booked for accommodation\n",
+    ">> 8. stays_in_week_nights: Number of week nights (Monday to Friday) booked for accommodation\n",
+    ">> 9. adults: Number of adults\n",
+    ">> 10. children: Number of children\n",
+    ">> 11. babies: Number of babies\n",
+    ">> 12. meal: Type of meal booked\n",
+    ">> 13. country: Country of origin\n",
+    ">> 14. market_segment: Market segment designation (TA- Travel Agents, TO- Tour Operators)\n",
+    ">> 15. distribution_channel: Booking distribution channel (TA- Travel Agents, T0- Tour Operators)\n",
+    ">> 16. is_repeated_guest: Value indication if booking name was from a repeated guest (1) or not (0)\n",
+    ">> 17. previous_cancellations: Number of previous bookings that were cancelled by the customer (prior to current booking)\n",
+    ">> 18. previous_bookings_not_canceled: Number of previous bookings not cancelled prior to current booking\n",
+    ">> 19. reserved_room_type: Code of room type reserved\n",
+    ">> 20. assigned_room_type: Code for the type of room assigned to the booking\n",
+    ">> 21. booking_changes: Number of changes made to the booking\n",
+    ">> 22. deposit_type: Indication on if the customer made a deposit to guarantee the booking\n",
+    ">> 23. agent: ID of the travel agency that made the booking\n",
+    ">> 24. company: ID of the company or organization that made the booking or is responsible for payment\n",
+    ">> 25. days_in_waiting_list: Number of days booking was in the waiting list until it was confirmed to the customer\n",
+    ">> 26. customer_type: Type of booking\n",
+    ">> 27. adr: Average Daily Rate (the sum of transactions divided by the number of nights stayed)\n",
+    ">> 28. required_car_parking_spaces: Number of car parking spaces requested\n",
+    ">> 29. total_of_special_requests: Number of special requests made by the customer\n",
+    ">> 30. reservation_status: Last reservation status (Canceled, Check-Out, No-Show)\n",
+    ">> 31. reservation_status_date: Date at which the last status was set"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> ##### *Understanding the features helps gain insight on how to treat null values.*"
    ],
    "metadata": {
     "collapsed": false,
@@ -337,7 +348,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "PRT    48590\nGBR    12129\nFRA    10415\nESP     8568\nDEU     7287\n       ...  \nVGB        1\nASM        1\nATF        1\nPYF        1\nDMA        1\nName: country, Length: 177, dtype: int64"
+      "text/plain": "PRT    48590\nGBR    12129\nFRA    10415\nESP     8568\nDEU     7287\n       ...  \nMMR        1\nMRT        1\nUMI        1\nDMA        1\nNIC        1\nName: country, Length: 177, dtype: int64"
      },
      "execution_count": 10,
      "metadata": {},
@@ -568,7 +579,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> Before further analysis I will split the data into a training set and a testing set.\n",
+    "> ### Splitting the Data:\n",
+    ">> Before further analysis I will split the data into a training set and a testing set.\n",
     "This will ensure avoidance of bias that could occur from learning the data as a whole."
    ],
    "metadata": {
@@ -580,7 +592,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
+   "outputs": [],
+   "source": [
+    "# the reason for selecting 0.15 as the test size is because there is a large of data\n",
+    "# the random state parameter ensures that data will be the split the same way in each run\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "train_set, test_set = train_test_split(df, test_size=0.15, random_state=42)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of instances in training set:  101481\n",
+      "Number of instances in testing set:  17909\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Number of instances in training set: \", len(train_set))\n",
+    "print(\"Number of instances in testing set: \", len(test_set))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "outputs": [],
    "source": [],
    "metadata": {
