--- a/1SA Final Project Hotel Bookings.ipynb
+++ b/1SA Final Project Hotel Bookings.ipynb
@@ -24,7 +24,8 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "import datetime"
    ]
   },
   {
@@ -348,7 +349,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "PRT    48590\nGBR    12129\nFRA    10415\nESP     8568\nDEU     7287\n       ...  \nMMR        1\nMRT        1\nUMI        1\nDMA        1\nNIC        1\nName: country, Length: 177, dtype: int64"
+      "text/plain": "PRT    48590\nGBR    12129\nFRA    10415\nESP     8568\nDEU     7287\n       ...  \nBFA        1\nHND        1\nNCL        1\nCYM        1\nMDG        1\nName: country, Length: 177, dtype: int64"
      },
      "execution_count": 10,
      "metadata": {},
@@ -548,7 +549,7 @@
    "source": [
     "# a histogram plot for each numerical attribute\n",
     "sns.set_style(style=\"whitegrid\")\n",
-    "df.hist(bins=50, figsize=(25,20));\n",
+    "df.hist(bins=50, figsize=(25,20))\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ],
@@ -632,10 +633,161 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 3. Cleaning and Visualizing the Data:\n",
+    "> ##### *The motivation for this section is to gain more insights.*"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "source": [
+    "# creating a deep copy of the training set\n",
+    "df2 = train_set.copy()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "execution_count": 19,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "              hotel  is_canceled  lead_time  arrival_date_year  \\\n24840  Resort Hotel            0        156               2016   \n6904   Resort Hotel            0        292               2016   \n\n      arrival_date_month  arrival_date_week_number  arrival_date_day_of_month  \\\n24840                May                        23                         30   \n6904                July                        29                         10   \n\n       stays_in_weekend_nights  stays_in_week_nights  adults  ...  \\\n24840                        1                     5       2  ...   \n6904                         1                     0       2  ...   \n\n       assigned_room_type  booking_changes deposit_type days_in_waiting_list  \\\n24840                   A                0   No Deposit                    0   \n6904                    A                0   No Deposit                    0   \n\n      customer_type    adr  required_car_parking_spaces  \\\n24840     Transient  52.36                            0   \n6904      Transient  72.90                            1   \n\n       total_of_special_requests reservation_status reservation_status_date  \n24840                          1          Check-Out              2016-06-05  \n6904                           2          Check-Out              2016-07-11  \n\n[2 rows x 29 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>hotel</th>\n      <th>is_canceled</th>\n      <th>lead_time</th>\n      <th>arrival_date_year</th>\n      <th>arrival_date_month</th>\n      <th>arrival_date_week_number</th>\n      <th>arrival_date_day_of_month</th>\n      <th>stays_in_weekend_nights</th>\n      <th>stays_in_week_nights</th>\n      <th>adults</th>\n      <th>...</th>\n      <th>assigned_room_type</th>\n      <th>booking_changes</th>\n      <th>deposit_type</th>\n      <th>days_in_waiting_list</th>\n      <th>customer_type</th>\n      <th>adr</th>\n      <th>required_car_parking_spaces</th>\n      <th>total_of_special_requests</th>\n      <th>reservation_status</th>\n      <th>reservation_status_date</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>24840</th>\n      <td>Resort Hotel</td>\n      <td>0</td>\n      <td>156</td>\n      <td>2016</td>\n      <td>May</td>\n      <td>23</td>\n      <td>30</td>\n      <td>1</td>\n      <td>5</td>\n      <td>2</td>\n      <td>...</td>\n      <td>A</td>\n      <td>0</td>\n      <td>No Deposit</td>\n      <td>0</td>\n      <td>Transient</td>\n      <td>52.36</td>\n      <td>0</td>\n      <td>1</td>\n      <td>Check-Out</td>\n      <td>2016-06-05</td>\n    </tr>\n    <tr>\n      <th>6904</th>\n      <td>Resort Hotel</td>\n      <td>0</td>\n      <td>292</td>\n      <td>2016</td>\n      <td>July</td>\n      <td>29</td>\n      <td>10</td>\n      <td>1</td>\n      <td>0</td>\n      <td>2</td>\n      <td>...</td>\n      <td>A</td>\n      <td>0</td>\n      <td>No Deposit</td>\n      <td>0</td>\n      <td>Transient</td>\n      <td>72.90</td>\n      <td>1</td>\n      <td>2</td>\n      <td>Check-Out</td>\n      <td>2016-07-11</td>\n    </tr>\n  </tbody>\n</table>\n<p>2 rows × 29 columns</p>\n</div>"
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.head(2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> In an earlier observation there were certain weeks when booking increased.\n",
+    "> Changing the months' column to numerical attributes would allow a more\n",
+    "> general view of when this tends to occur."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "outputs": [],
-   "source": [],
+   "source": [
+    "# converting months to integers\n",
+    "df2[\"arrival_date_month\"] = pd.to_datetime(df[\"arrival_date_month\"], format=\"%B\").dt.month"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "              hotel  is_canceled  lead_time  arrival_date_year  \\\n24840  Resort Hotel            0        156               2016   \n6904   Resort Hotel            0        292               2016   \n\n       arrival_date_month  arrival_date_week_number  \\\n24840                   5                        23   \n6904                    7                        29   \n\n       arrival_date_day_of_month  stays_in_weekend_nights  \\\n24840                         30                        1   \n6904                          10                        1   \n\n       stays_in_week_nights  adults  ...  assigned_room_type  booking_changes  \\\n24840                     5       2  ...                   A                0   \n6904                      0       2  ...                   A                0   \n\n      deposit_type days_in_waiting_list customer_type    adr  \\\n24840   No Deposit                    0     Transient  52.36   \n6904    No Deposit                    0     Transient  72.90   \n\n       required_car_parking_spaces  total_of_special_requests  \\\n24840                            0                          1   \n6904                             1                          2   \n\n      reservation_status reservation_status_date  \n24840          Check-Out              2016-06-05  \n6904           Check-Out              2016-07-11  \n\n[2 rows x 29 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>hotel</th>\n      <th>is_canceled</th>\n      <th>lead_time</th>\n      <th>arrival_date_year</th>\n      <th>arrival_date_month</th>\n      <th>arrival_date_week_number</th>\n      <th>arrival_date_day_of_month</th>\n      <th>stays_in_weekend_nights</th>\n      <th>stays_in_week_nights</th>\n      <th>adults</th>\n      <th>...</th>\n      <th>assigned_room_type</th>\n      <th>booking_changes</th>\n      <th>deposit_type</th>\n      <th>days_in_waiting_list</th>\n      <th>customer_type</th>\n      <th>adr</th>\n      <th>required_car_parking_spaces</th>\n      <th>total_of_special_requests</th>\n      <th>reservation_status</th>\n      <th>reservation_status_date</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>24840</th>\n      <td>Resort Hotel</td>\n      <td>0</td>\n      <td>156</td>\n      <td>2016</td>\n      <td>5</td>\n      <td>23</td>\n      <td>30</td>\n      <td>1</td>\n      <td>5</td>\n      <td>2</td>\n      <td>...</td>\n      <td>A</td>\n      <td>0</td>\n      <td>No Deposit</td>\n      <td>0</td>\n      <td>Transient</td>\n      <td>52.36</td>\n      <td>0</td>\n      <td>1</td>\n      <td>Check-Out</td>\n      <td>2016-06-05</td>\n    </tr>\n    <tr>\n      <th>6904</th>\n      <td>Resort Hotel</td>\n      <td>0</td>\n      <td>292</td>\n      <td>2016</td>\n      <td>7</td>\n      <td>29</td>\n      <td>10</td>\n      <td>1</td>\n      <td>0</td>\n      <td>2</td>\n      <td>...</td>\n      <td>A</td>\n      <td>0</td>\n      <td>No Deposit</td>\n      <td>0</td>\n      <td>Transient</td>\n      <td>72.90</td>\n      <td>1</td>\n      <td>2</td>\n      <td>Check-Out</td>\n      <td>2016-07-11</td>\n    </tr>\n  </tbody>\n</table>\n<p>2 rows × 29 columns</p>\n</div>"
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# examining the changes\n",
+    "df2.head(2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 101481 entries, 24840 to 15795\n",
+      "Data columns (total 29 columns):\n",
+      " #   Column                          Non-Null Count   Dtype  \n",
+      "---  ------                          --------------   -----  \n",
+      " 0   hotel                           101481 non-null  object \n",
+      " 1   is_canceled                     101481 non-null  int64  \n",
+      " 2   lead_time                       101481 non-null  int64  \n",
+      " 3   arrival_date_year               101481 non-null  int64  \n",
+      " 4   arrival_date_month              101481 non-null  int64  \n",
+      " 5   arrival_date_week_number        101481 non-null  int64  \n",
+      " 6   arrival_date_day_of_month       101481 non-null  int64  \n",
+      " 7   stays_in_weekend_nights         101481 non-null  int64  \n",
+      " 8   stays_in_week_nights            101481 non-null  int64  \n",
+      " 9   adults                          101481 non-null  int64  \n",
+      " 10  children                        101481 non-null  float64\n",
+      " 11  babies                          101481 non-null  int64  \n",
+      " 12  meal                            101481 non-null  object \n",
+      " 13  market_segment                  101481 non-null  object \n",
+      " 14  distribution_channel            101481 non-null  object \n",
+      " 15  is_repeated_guest               101481 non-null  int64  \n",
+      " 16  previous_cancellations          101481 non-null  int64  \n",
+      " 17  previous_bookings_not_canceled  101481 non-null  int64  \n",
+      " 18  reserved_room_type              101481 non-null  object \n",
+      " 19  assigned_room_type              101481 non-null  object \n",
+      " 20  booking_changes                 101481 non-null  int64  \n",
+      " 21  deposit_type                    101481 non-null  object \n",
+      " 22  days_in_waiting_list            101481 non-null  int64  \n",
+      " 23  customer_type                   101481 non-null  object \n",
+      " 24  adr                             101481 non-null  float64\n",
+      " 25  required_car_parking_spaces     101481 non-null  int64  \n",
+      " 26  total_of_special_requests       101481 non-null  int64  \n",
+      " 27  reservation_status              101481 non-null  object \n",
+      " 28  reservation_status_date         101481 non-null  object \n",
+      "dtypes: float64(2), int64(17), object(10)\n",
+      "memory usage: 28.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
