Convert "deposit_type" category into numbers

--- a/1SA Final Project Hotel Bookings.ipynb
+++ b/1SA Final Project Hotel Bookings.ipynb
@@ -376,7 +376,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "PRT    48590\nGBR    12129\nFRA    10415\nESP     8568\nDEU     7287\n       ...  \nPYF        1\nBWA        1\nBHS        1\nMDG        1\nMLI        1\nName: country, Length: 177, dtype: int64"
+      "text/plain": "PRT    48590\nGBR    12129\nFRA    10415\nESP     8568\nDEU     7287\n       ...  \nNIC        1\nBHS        1\nVGB        1\nUMI        1\nAIA        1\nName: country, Length: 177, dtype: int64"
      },
      "execution_count": 11,
      "metadata": {},
@@ -767,11 +767,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "No Deposit    89037\nNon Refund    12304\nRefundable      140\nName: deposit_type, dtype: int64"
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2[\"deposit_type\"].value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "       deposit_type\n24840    No Deposit\n6904     No Deposit\n1873     No Deposit\n20584    No Deposit\n113582   No Deposit\n50524    No Deposit\n47714    No Deposit\n72174    Non Refund\n14644    No Deposit\n82993    No Deposit",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>deposit_type</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>24840</th>\n      <td>No Deposit</td>\n    </tr>\n    <tr>\n      <th>6904</th>\n      <td>No Deposit</td>\n    </tr>\n    <tr>\n      <th>1873</th>\n      <td>No Deposit</td>\n    </tr>\n    <tr>\n      <th>20584</th>\n      <td>No Deposit</td>\n    </tr>\n    <tr>\n      <th>113582</th>\n      <td>No Deposit</td>\n    </tr>\n    <tr>\n      <th>50524</th>\n      <td>No Deposit</td>\n    </tr>\n    <tr>\n      <th>47714</th>\n      <td>No Deposit</td>\n    </tr>\n    <tr>\n      <th>72174</th>\n      <td>Non Refund</td>\n    </tr>\n    <tr>\n      <th>14644</th>\n      <td>No Deposit</td>\n    </tr>\n    <tr>\n      <th>82993</th>\n      <td>No Deposit</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deposit_cat = df2[[\"deposit_type\"]]\n",
+    "deposit_cat.head(10)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "outputs": [],
    "source": [
-    "\n"
+    "# using encoder to convert the \"deposit_type\" category into numbers\n",
+    "from sklearn.preprocessing import OrdinalEncoder\n",
+    "ordinal_encoder = OrdinalEncoder()\n",
+    "df2[\"deposit_type\"] = ordinal_encoder.fit_transform(deposit_cat)"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[array(['No Deposit', 'Non Refund', 'Refundable'], dtype=object)]"
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# shows categories that were encoded\n",
+    "ordinal_encoder.categories_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.0    89037\n1.0    12304\n2.0      140\nName: deposit_type, dtype: int64"
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2[\"deposit_type\"].value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
