Add table of is_canceled column according to deposit

--- a/1SA Final Project Hotel Bookings.ipynb
+++ b/1SA Final Project Hotel Bookings.ipynb
@@ -376,7 +376,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "PRT    48590\nGBR    12129\nFRA    10415\nESP     8568\nDEU     7287\n       ...  \nNPL        1\nUMI        1\nMDG        1\nSMR        1\nPYF        1\nName: country, Length: 177, dtype: int64"
+      "text/plain": "PRT    48590\nGBR    12129\nFRA    10415\nESP     8568\nDEU     7287\n       ...  \nSMR        1\nASM        1\nPLW        1\nFJI        1\nATF        1\nName: country, Length: 177, dtype: int64"
      },
      "execution_count": 11,
      "metadata": {},
@@ -964,9 +964,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0    64049\n1    37432\nName: is_canceled, dtype: int64"
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2[\"is_canceled\"].value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "outputs": [],
-   "source": [],
+   "source": [
+    "deposit = df2.groupby(by=\"deposit_type\")\n",
+    "no_deposit = deposit.get_group(0)\n",
+    "non_refund = deposit.get_group(1)\n",
+    "refundable = deposit.get_group(2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [],
+   "source": [
+    "no_deposit_counts_0 = (no_deposit[\"is_canceled\"] == 0).sum()\n",
+    "no_deposit_counts_1 = (no_deposit[\"is_canceled\"] == 1).sum()\n",
+    "non_refund_counts_0 = (non_refund[\"is_canceled\"] == 0).sum()\n",
+    "non_refund_counts_1 = (non_refund[\"is_canceled\"] == 1).sum()\n",
+    "refundable_counts_0 = (refundable[\"is_canceled\"] == 0).sum()\n",
+    "refundable_counts_1 = (refundable[\"is_canceled\"] == 1).sum()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                Not Canceled (0)  Canceled (1)\nNo Deposit (0)             63860         25177\nNon Refund (1)                81         12223\nRefundable (2)               108            32",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Not Canceled (0)</th>\n      <th>Canceled (1)</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>No Deposit (0)</th>\n      <td>63860</td>\n      <td>25177</td>\n    </tr>\n    <tr>\n      <th>Non Refund (1)</th>\n      <td>81</td>\n      <td>12223</td>\n    </tr>\n    <tr>\n      <th>Refundable (2)</th>\n      <td>108</td>\n      <td>32</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# table of is_canceled column according to deposit\n",
+    "deposit_data = {\"Not Canceled (0)\": [no_deposit_counts_0, non_refund_counts_0, refundable_counts_0],\n",
+    "        \"Canceled (1)\": [no_deposit_counts_1, non_refund_counts_1, refundable_counts_1]}\n",
+    "\n",
+    "pd.DataFrame(deposit_data, index=[\"No Deposit (0)\", \"Non Refund (1)\", \"Refundable (2)\"])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "outputs": [],
+   "source": [
+    "\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
