Remove is_canceled according to deposit table

--- a/1SA Final Project Hotel Bookings.ipynb
+++ b/1SA Final Project Hotel Bookings.ipynb
@@ -378,7 +378,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "PRT    48590\nGBR    12129\nFRA    10415\nESP     8568\nDEU     7287\n       ...  \nPLW        1\nDJI        1\nKIR        1\nASM        1\nFJI        1\nName: country, Length: 177, dtype: int64"
+      "text/plain": "PRT    48590\nGBR    12129\nFRA    10415\nESP     8568\nDEU     7287\n       ...  \nAIA        1\nMDG        1\nKIR        1\nMMR        1\nSLE        1\nName: country, Length: 177, dtype: int64"
      },
      "execution_count": 11,
      "metadata": {},
@@ -1173,29 +1173,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "0    64049\n1    37432\nName: is_canceled, dtype: int64"
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df2[\"is_canceled\"].value_counts()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
    "outputs": [],
    "source": [
     "deposit = df2.groupby(by=\"deposit_type\")\n",
@@ -1212,54 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "outputs": [],
-   "source": [
-    "no_deposit_counts_0 = (no_deposit[\"is_canceled\"] == 0).sum()\n",
-    "no_deposit_counts_1 = (no_deposit[\"is_canceled\"] == 1).sum()\n",
-    "non_refund_counts_0 = (non_refund[\"is_canceled\"] == 0).sum()\n",
-    "non_refund_counts_1 = (non_refund[\"is_canceled\"] == 1).sum()\n",
-    "refundable_counts_0 = (refundable[\"is_canceled\"] == 0).sum()\n",
-    "refundable_counts_1 = (refundable[\"is_canceled\"] == 1).sum()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "                Not Canceled (0)  Canceled (1)\nNo Deposit (0)             63860         25177\nNon Refund (1)                81         12223\nRefundable (2)               108            32",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Not Canceled (0)</th>\n      <th>Canceled (1)</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>No Deposit (0)</th>\n      <td>63860</td>\n      <td>25177</td>\n    </tr>\n    <tr>\n      <th>Non Refund (1)</th>\n      <td>81</td>\n      <td>12223</td>\n    </tr>\n    <tr>\n      <th>Refundable (2)</th>\n      <td>108</td>\n      <td>32</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# table of is_canceled column according to deposit\n",
-    "deposit_data = {\"Not Canceled (0)\": [no_deposit_counts_0, non_refund_counts_0, refundable_counts_0],\n",
-    "        \"Canceled (1)\": [no_deposit_counts_1, non_refund_counts_1, refundable_counts_1]}\n",
-    "\n",
-    "pd.DataFrame(deposit_data, index=[\"No Deposit (0)\", \"Non Refund (1)\", \"Refundable (2)\"])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "outputs": [],
    "source": [
     "number_of_guests = df2[\"adults\"] + df2[\"children\"] + df2[\"babies\"]\n",
@@ -1274,14 +1204,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 38,
    "outputs": [
     {
      "data": {
       "text/plain": "              hotel  is_canceled  lead_time  arrival_date_year  \\\n24840  Resort Hotel            0        156               2016   \n6904   Resort Hotel            0        292               2016   \n1873   Resort Hotel            0         61               2015   \n\n       arrival_date_month  arrival_date_week_number  \\\n24840                   5                        23   \n6904                    7                        29   \n1873                    9                        38   \n\n       arrival_date_day_of_month  stays_in_weekend_nights  \\\n24840                         30                        1   \n6904                          10                        1   \n1873                          19                        2   \n\n       stays_in_week_nights  adults  children  babies distribution_channel  \\\n24840                     5       2       0.0       0                TA/TO   \n6904                      0       2       0.0       0                TA/TO   \n1873                      2       2       0.0       0               Direct   \n\n       is_repeated_guest  previous_cancellations  deposit_type  \\\n24840                  0                       0           0.0   \n6904                   0                       0           0.0   \n1873                   0                       0           0.0   \n\n       days_in_waiting_list  number_of_guests  \n24840                     0                 2  \n6904                      0                 2  \n1873                      0                 2  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>hotel</th>\n      <th>is_canceled</th>\n      <th>lead_time</th>\n      <th>arrival_date_year</th>\n      <th>arrival_date_month</th>\n      <th>arrival_date_week_number</th>\n      <th>arrival_date_day_of_month</th>\n      <th>stays_in_weekend_nights</th>\n      <th>stays_in_week_nights</th>\n      <th>adults</th>\n      <th>children</th>\n      <th>babies</th>\n      <th>distribution_channel</th>\n      <th>is_repeated_guest</th>\n      <th>previous_cancellations</th>\n      <th>deposit_type</th>\n      <th>days_in_waiting_list</th>\n      <th>number_of_guests</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>24840</th>\n      <td>Resort Hotel</td>\n      <td>0</td>\n      <td>156</td>\n      <td>2016</td>\n      <td>5</td>\n      <td>23</td>\n      <td>30</td>\n      <td>1</td>\n      <td>5</td>\n      <td>2</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>TA/TO</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>6904</th>\n      <td>Resort Hotel</td>\n      <td>0</td>\n      <td>292</td>\n      <td>2016</td>\n      <td>7</td>\n      <td>29</td>\n      <td>10</td>\n      <td>1</td>\n      <td>0</td>\n      <td>2</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>TA/TO</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>1873</th>\n      <td>Resort Hotel</td>\n      <td>0</td>\n      <td>61</td>\n      <td>2015</td>\n      <td>9</td>\n      <td>38</td>\n      <td>19</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>Direct</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>2</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 41,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1298,13 +1228,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 39,
    "outputs": [
     {
      "data": {
       "text/plain": "2     69658\n1     19249\n3      8941\n4      3355\n0       150\n5       115\n26        5\n27        2\n12        2\n50        1\n40        1\n20        1\n6         1\nName: number_of_guests, dtype: int64"
      },
-     "execution_count": 42,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1321,38 +1251,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'adr'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
-      "\u001B[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001B[0m in \u001B[0;36mget_loc\u001B[1;34m(self, key, method, tolerance)\u001B[0m\n\u001B[0;32m   2645\u001B[0m             \u001B[1;32mtry\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m-> 2646\u001B[1;33m                 \u001B[1;32mreturn\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_engine\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mget_loc\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mkey\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m   2647\u001B[0m             \u001B[1;32mexcept\u001B[0m \u001B[0mKeyError\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32mpandas\\_libs\\index.pyx\u001B[0m in \u001B[0;36mpandas._libs.index.IndexEngine.get_loc\u001B[1;34m()\u001B[0m\n",
-      "\u001B[1;32mpandas\\_libs\\index.pyx\u001B[0m in \u001B[0;36mpandas._libs.index.IndexEngine.get_loc\u001B[1;34m()\u001B[0m\n",
-      "\u001B[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001B[0m in \u001B[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001B[1;34m()\u001B[0m\n",
-      "\u001B[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001B[0m in \u001B[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001B[1;34m()\u001B[0m\n",
-      "\u001B[1;31mKeyError\u001B[0m: 'adr'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001B[1;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
-      "\u001B[1;32m<ipython-input-43-8fdc54c7c1ae>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[0mguests\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mdf2\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mgroupby\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mby\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;34m\"number_of_guests\"\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      2\u001B[0m \u001B[0mguests_0\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mguests\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mget_group\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 3\u001B[1;33m \u001B[0mguests_0\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;34m\"adr\"\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mhead\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      4\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001B[0m in \u001B[0;36m__getitem__\u001B[1;34m(self, key)\u001B[0m\n\u001B[0;32m   2798\u001B[0m             \u001B[1;32mif\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mcolumns\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mnlevels\u001B[0m \u001B[1;33m>\u001B[0m \u001B[1;36m1\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m   2799\u001B[0m                 \u001B[1;32mreturn\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_getitem_multilevel\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mkey\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m-> 2800\u001B[1;33m             \u001B[0mindexer\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mcolumns\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mget_loc\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mkey\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m   2801\u001B[0m             \u001B[1;32mif\u001B[0m \u001B[0mis_integer\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mindexer\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m   2802\u001B[0m                 \u001B[0mindexer\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;33m[\u001B[0m\u001B[0mindexer\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001B[0m in \u001B[0;36mget_loc\u001B[1;34m(self, key, method, tolerance)\u001B[0m\n\u001B[0;32m   2646\u001B[0m                 \u001B[1;32mreturn\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_engine\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mget_loc\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mkey\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m   2647\u001B[0m             \u001B[1;32mexcept\u001B[0m \u001B[0mKeyError\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m-> 2648\u001B[1;33m                 \u001B[1;32mreturn\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_engine\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mget_loc\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_maybe_cast_indexer\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mkey\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m   2649\u001B[0m         \u001B[0mindexer\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mget_indexer\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mkey\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mmethod\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mmethod\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mtolerance\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mtolerance\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m   2650\u001B[0m         \u001B[1;32mif\u001B[0m \u001B[0mindexer\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mndim\u001B[0m \u001B[1;33m>\u001B[0m \u001B[1;36m1\u001B[0m \u001B[1;32mor\u001B[0m \u001B[0mindexer\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msize\u001B[0m \u001B[1;33m>\u001B[0m \u001B[1;36m1\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32mpandas\\_libs\\index.pyx\u001B[0m in \u001B[0;36mpandas._libs.index.IndexEngine.get_loc\u001B[1;34m()\u001B[0m\n",
-      "\u001B[1;32mpandas\\_libs\\index.pyx\u001B[0m in \u001B[0;36mpandas._libs.index.IndexEngine.get_loc\u001B[1;34m()\u001B[0m\n",
-      "\u001B[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001B[0m in \u001B[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001B[1;34m()\u001B[0m\n",
-      "\u001B[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001B[0m in \u001B[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001B[1;34m()\u001B[0m\n",
-      "\u001B[1;31mKeyError\u001B[0m: 'adr'"
-     ]
-    }
-   ],
+   "execution_count": 40,
+   "outputs": [],
    "source": [
     "guests = df2.groupby(by=\"number_of_guests\")\n",
-    "guests_0 = guests.get_group(0)\n",
-    "guests_0[\"adr\"].head()"
+    "guests_0 = guests.get_group(0)"
    ],
    "metadata": {
     "collapsed": false,
@@ -1363,43 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "guests_0.size"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "hotel = df2.groupby(by=\"hotel\")\n",
-    "resort_hotel = hotel.get_group(\"Resort Hotel\")\n",
-    "city_hotel = hotel.get_group(\"City Hotel\")\n",
-    "med_resort_hotel_price = resort_hotel[\"adr\"].median()\n",
-    "med_city_hotel_price = city_hotel[\"adr\"].median()\n",
-    "avg_resort_hotel_guests = resort_hotel[\"number_of_guests\"].median()\n",
-    "avg_resort_hotel_guests = int(avg_resort_hotel_guests)\n",
-    "avg_city_hotel_guests = city_hotel[\"number_of_guests\"].median()\n",
-    "avg_city_hotel_guests = int(avg_city_hotel_guests)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "outputs": [],
    "source": [
     "\n"
